--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,60 @@
+body {
+  background: #ffebbb;
+  font-family: sans-serif;
+}
+
 h1 {
   text-align: center;
+  font-size: 40px;
+}
+select {
+  display: block;
+  width: 100%;
+  border-radius: 6px;
+  padding: 8px;
+  font-size: 16px;
+}
+h2 {
+  margin: 0 0 12px;
+  font-size: 28px;
+}
+.container {
+  max-width: 650px;
+  margin: 60px auto;
+  padding: 50px;
+  background: white;
+  border-radius: 13px;
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
+    rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+  font-family: sans-serif;
+  font-size: 20px;
+}
+.city {
+  display: flex;
+  justify-content: space-between;
+  padding: 18px 0;
+  border-bottom: 1px dashed rgba(0, 0, 0, 0.4);
+}
+.city:last-child {
+  border: none;
+}
+
+.date {
+  opacity: 0.7;
+  font-size: 16px;
+}
+.time {
+  font-size: 34px;
+  font-weight: bold;
+}
+.time small {
+  font-size: 15px;
+  line-height: 34px;
+  vertical-align: middle;
+}
+
+footer {
+  text-align: center;
+  font-size: 14px;
+  opacity: 0.8;
 }
